updated greeting for empty list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Successorator</string>
     <string name="placeholder">Placeholder</string>
-    <string name="hello_world">Hello, World!</string>
+    <string name="empty_list_greeting">No goals for the Day. Click the + at the upper right to enter your Most Important Thing.</string>
 </resources>
